--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-DB_CONN_STRING="mongodb://localhost:27017"
-DB_NAME="gamesDB"
-GAMES_COLLECTION_NAME="games"
+DB_CONN_STRING="mongodb://localhost:27019/ts"
