--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.16.4",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.0.12"
   }
 }
