--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "typescriptshit",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch 'src/**' --exec 'ts-node' src/app.ts",
+    "build": "tsc",
+    "prod": "node dist/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "14.6.2",
     "@types/whatwg-url": "^8.2.1",
     "dotenv": "^10.0.0",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0",
     "tslint": "^5.12.1",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "lodash": "^4.17.21",
     "mongodb": "^4.1.3",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "winston": "^3.3.3"
   }
 }
