--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "fastest-validator": "^1.12.0",
     "lodash": "^4.17.21",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
+    "validatorjs": "^3.22.1",
     "winston": "^3.3.3"
   }
 }
