--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
-version: '2'
+version: "3.4"
+
 services:
+
   mongo:
-    image: mongo
+    image: mongo:5.0.3
     ports:
-      - '27019:27017'
+      - 27017:27017
+
+  api:
+    build: .
+    env_file:
+      - .env
+    restart: always
+    expose:
+      - 4000
+    depends_on:
+      - mongo
+    volumes:
+      - ./node_modules:/app/node_modules
+    user: root
