--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
+    "docker": "NODE_ENV=development docker-compose -f docker-compose.yml -f docker-compose/docker-compose.dev.yml --env-file env/.env.dev run -p 4000:4000 --rm -v $(pwd):/app api $npm_config_name",
+    "test_env": "NODE_ENV=test docker-compose -f docker-compose.yml -f docker-compose/docker-compose.test.yml --env-file env/.env.test run --rm -v $(pwd):/app api $npm_config_name",
     "start": "nodemon --watch 'src/**' --exec 'ts-node' src/app.ts",
-    "start:docker": "docker-compose run --rm -v $(pwd):/app api run start",
-    "install:docker": "docker-compose run --rm -v $(pwd):/app api install",
     "build": "tsc",
     "prod": "node dist/app.js"
   },
